# multiplayer-demo

./: Cargo.toml
assets/: creature-blue.aseprite  creature-blue.json  creature-sheet.aseprite  creature-sheet.json
client/: Cargo.toml
client/src/: animator.rs  main.rs
messages/: Cargo.toml
messages/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
shared_components/: Cargo.toml
shared_components/src/: lib.rs
